--- a/ndp.cfg
+++ b/ndp.cfg
@@ -1,11 +1,16 @@
 [VIDEO]
+# a positive float
 CompressRatio = 1.0
+# a list of scale indices, separated by commas
+OmitScales = 3
+# in seconds
+SampleRate = 5 
 
 [SKYLINE]
+# in pixel
 Y = 220
 
 [POLYGONS]
 # PolyK = x1,y1,x2,y2,x3,y3,... 
 Tank = 0,719, 0,620, 650,350, 715,350, 1279,620, 1279,719
-; Poly2 = 0,0,10,10,10,25
 
