--- a/ndp.cfg
+++ b/ndp.cfg
@@ -5,6 +5,15 @@ CompressRatio = 1.0
 OmitScales = 3
 # in seconds
 SampleRate = 5 
+# yes/no
+Display = yes
+; Display = no
+# yes/no
+OutputVideo = yes
+; OutputVideo = no
+# yes/no
+OutputCSV = yes
+; OutputCSV = no
 
 [SKYLINE]
 # in pixel
