--- a/ndp.cfg
+++ b/ndp.cfg
@@ -4,13 +4,13 @@ CompressRatio = 1.0
 # a list of scale indices, separated by commas
 OmitScales = 3
 # in seconds
-SampleRate = 5 
+SampleRate = 0.75
 # yes/no
-Display = yes
-; Display = no
+; Display = yes
+Display = no
 # yes/no
-OutputVideo = yes
-; OutputVideo = no
+; OutputVideo = yes
+OutputVideo = no
 # yes/no
 OutputCSV = yes
 ; OutputCSV = no
@@ -23,3 +23,10 @@ Y = 220
 # PolyK = x1,y1,x2,y2,x3,y3,... 
 Tank = 0,719, 0,620, 650,350, 715,350, 1279,620, 1279,719
 
+[POSTPROC]
+# This is the number of seconds of video to average per step, in the case where the platform is traveling at 20km/h.
+
+# sample rates in secs
+profile20kmh = 9
+profile10kmh = 18
+profile0kmh = -1
