--- a/ndp.cfg
+++ b/ndp.cfg
@@ -6,14 +6,14 @@ OmitScales = 3
 # in seconds
 SampleRate = 0.75
 # yes/no
-; Display = yes
+# Display = yes
 Display = no
 # yes/no
-; OutputVideo = yes
-OutputVideo = no
+OutputVideo = yes
+# OutputVideo = no
 # yes/no
 OutputCSV = yes
-; OutputCSV = no
+# OutputCSV = no
 
 [SKYLINE]
 # in pixel
