readme, shift stuffs, round stuffs

--- a/ndp.cfg
+++ b/ndp.cfg
@@ -9,8 +9,8 @@ SampleRate = 0.75
 # Display = yes
 Display = no
 # yes/no
-OutputVideo = yes
-# OutputVideo = no
+# OutputVideo = yes
+OutputVideo = no
 # yes/no
 OutputCSV = yes
 # OutputCSV = no
