--- a/ndp.cfg
+++ b/ndp.cfg
@@ -4,7 +4,7 @@ CompressRatio = 1.0
 # a list of scale indices, separated by commas
 OmitScales = 3
 # in seconds
-SampleRate = 0.75
+SampleRate = 1.2
 # yes/no
 # Display = yes
 Display = no
@@ -27,6 +27,7 @@ Tank = 0,719, 0,620, 650,350, 715,350, 1279,620, 1279,719
 # This is the number of seconds of video to average per step, in the case where the platform is traveling at 20km/h.
 
 # sample rates in secs
+profile30kmh = 6
 profile20kmh = 9
 profile10kmh = 18
 profile0kmh = -1
